<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="dialog_ask_notification_access">Nuntius requires access to notifications. When the notification settings will open, select Nuntius checkbox and confirm. Then hit the back button.</string>
    <string name="button_got_it">Got it</string>
    <string name="label_welcome_text">Nuntius allows you to proxy the notifications with other devices. Just enable the notification sharing for Nuntius after pressing "Got it" and pair the Bluetooth with the specific device.</string>
    <string name="enable_nuntius">Enable Nuntius</string>
    <string name="bluetooth_not_available">Bluetooth is not available on this device</string>
    <string name="bluetooth_not_enabled">Nuntius requires Bluetooth to be enabled</string>
    <string name="enable_notification_toast_hint">Now select Nuntius checkbox and confirm. Then hit the back button.</string>
    <string name="pref_license_title">License</string>
    <string name="pref_min_notification_priority">Minimum notification priority</string>
    <string name="pref_min_notification_priority_summary">Set the minimum notification priority from which the app will share notification</string>
    <plurals name="running_with_x_connections">
        <item quantity="one">Running with %1$d connection.</item>
        <item quantity="other">Running with %1$d connections.</item>
    </plurals>
    <string name="notification_not_enabled">Nuntius requires access to the notification to be enabled</string>
    <string name="not_paired">Please pair your device to a computer</string>
    <string name="version">Nuntius Version</string>
    <string name="app_blacklist_title">Blacklisted Apps</string>
    <string name="app_blacklist_summary">Ignore notifications from selected apps</string>
    <string name="blacklisted_title">Blacklisted Apps</string>
    <string name="blacklist_title">Add Apps to Blacklist</string>
    <string name="added_to_blacklist">%s blacklisted</string>
    <string name="removed_from_blacklist">%s removed from blacklist</string>
    <string name="undo">Undo</string>
    <string name="ip">My IP</string>
    <string name="relaunch_server">Enable the switch to relaunch the server.</string>
    <string name="qrcode_title">Trust the new connection ?</string>
    <string name="qrcode_summary">Flash the qrcode that appeared on the desktop to trust the new computer.</string>
    <string name="qrcode_title_trusted">%s is now trusted.</string>
    <string name="qrcode_summary_trusted">You can now close the qr code view to connect to the new computer.</string>
    <string name="settings_about">About</string>
    <string name="settings_more">More</string>
    <string name="settings_qrcode_title">QR Code</string>
    <string name="settings_qrcode_summary">Launch the qr code view</string>
    <string name="settings_notification_test_title">Send a notification</string>
    <string name="settings_notification_test_summary">Allows you to test if the notification is received on desktop</string>
    <string name="notification_test_title">Nuntius Notification Test</string>
    <string name="notification_new_connection_title">Nuntius: New Connection</string>
    <string name="notification_summary">Hello from nutius %s.</string>
</resources>
