<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory
        android:title="@string/app_name"
        android:key="pref_key_storage_settings">

        <SwitchPreference
            android:key="main_enable_switch"
            android:title="@string/enable_nuntius"
            />

        <ListPreference
            android:key="pref_min_notification_priority"
            android:title="@string/pref_min_notification_priority"
            android:dialogTitle="@string/pref_min_notification_priority"
            android:summary="@string/pref_min_notification_priority_summary"
            android:entries="@array/pref_min_notification_priority_entries"
            android:entryValues="@array/pref_min_notification_priority_values"
            android:defaultValue="@string/pref_min_notification_priority_default" />

        <Preference
            android:key="app_blacklist"
            android:title="@string/app_blacklist_title"
            android:summary="@string/app_blacklist_summary">

            <intent
                android:action="android.intent.action.VIEW"
                android:targetPackage="org.holylobster.nuntius"
                android:targetClass="org.holylobster.nuntius.activity.ApplicationBlacklist"
                />

        </Preference>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/settings_more"
        android:key="pref_key_storage_settings">

    <Preference
        android:key="qrcode"
        android:title="@string/settings_qrcode_title"
        android:summary="@string/settings_qrcode_summary"/>

    <Preference
        android:key="notification_test"
        android:title="@string/settings_notification_test_title"
        android:summary="@string/settings_notification_test_summary"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/settings_about"
        android:key="pref_key_storage_settings">

        <Preference
            android:key="license"
            android:title="@string/pref_license_title"
            android:summary="@string/license_type">
        </Preference>

        <Preference
            android:key="web_site"
            android:title="@string/holylobster"
            android:summary="@string/web_site">

            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/web_site"
                />

        </Preference>

        <Preference
            android:key="version"
            android:title="@string/version"
            android:summary="">
        </Preference>

    </PreferenceCategory>

</PreferenceScreen>
